fix aligns

--- a/source/styles/blocks/card.less
+++ b/source/styles/blocks/card.less
@@ -144,6 +144,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  justify-content: space-between;
   width: 40%;
   flex-shrink: 0;
 }
